# reccak

./: Cargo.toml  README.md
benches/: benchmark.rs  hash.rs  permutation.rs
src/: hash.rs  lib.rs  main.rs  permutation.rs  reverse_hash.rs  reverse_hash_custom.rs  reverse_hash_rayon.rs  utils.rs
