[package]
name = "reccak"
version = "0.1.0"
authors = ["gbaranski <root@gbaranski.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.13.0"
rayon = "1.5.1"
smallvec = "1.6.1"

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "permutation"
harness = false

[[bench]]
name = "hash"
harness = false


[[bin]]
name = "hash"
path = "src/hash.rs"

[[bin]]
name = "reverse-hash-rayon"
path = "src/reverse_hash_rayon.rs"

[[bin]]
name = "reverse-hash-custom"
path = "src/reverse_hash_custom.rs"
